--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
             <div class="container my-5">
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
-                        <h2>주연우</h2>
-                        <h4><span>🎓</span>전공 / 프로그래밍 경험</h4>
+                        <h2>주연우      </h2>
+                        <h4><span>🎓</span>기본정보보</h4>
                         <ul>
                             <li><strong>전공:</strong> 환경공학 / 소프트웨어융합전공</li>
                             <li><strong>프로그래밍 경험:</strong> Python, C</li>
@@ -139,8 +139,8 @@
                     <div class="col-lg-6">
                         <h4><span>🎨</span>취미 / 일상</h4>
                         <ul>
-                            <li><strong>취미:</strong> 독서, 영화 감상, 여행</li>
-                            <li><strong>일상:</strong> 주로 공부하고 운동을 즐깁니다. 주말에는 친구들과 시간을 보내거나 자주 책을 읽습니다.</li>
+                            <li><strong>취미:</strong> 영화 감상, 여행</li>
+                            <li><strong>일상:</strong> 책을 읽으려고 노력중</li>
                         </ul>
                     </div>
                 </div>
@@ -154,7 +154,7 @@
                     <div class="col-lg-6">
                         <h4><span>💡</span>임하는 마음</h4>
                         <ul>
-                            <li><strong>임하는 마음:</strong> 항상 긍정적이고 도전적인 마음가짐으로 새로운 것에 도전하고, 문제를 해결해 나가는 것에 큰 의미를 둡니다.</li>
+                            <li><strong>임하는 마음:</strong> 아직 부족하지만, 노력해서 성장하고자 합니다.</li>
                         </ul>
                     </div>
                 </div>
