--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
                         <h2>주연우      </h2>
-                        <h4><span>🎓</span>기본정보보</h4>
+                        <h4><span>🎓</span>기본정보</h4>
                         <ul>
                             <li><strong>전공:</strong> 환경공학 / 소프트웨어융합전공</li>
-                            <li><strong>프로그래밍 경험:</strong> Python, C</li>
-                            <li><strong>인상 깊었던 수업:</strong> 웹 프로그래밍, 자료구조</li>
+                            <li><strong>프로그래밍 경험:</strong>  NDVI를 활용한 서울시 녹지공간 분석 및 옥상녹화 시뮬레이션을 통한 NbS 기반 탄소흡수원 증진 전략, 산불 취약성 지도, 시계열분석을 통한 서울시 대기환경정책 실효성 평가 </li>
+                            <li><strong>인상 깊었던 수업:</strong> 융합소프트웨어기초설계, 대기관리및실습</li>
                         </ul>
                     </div>
                 </div>
@@ -137,10 +137,12 @@
             <div class="container my-5">
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
-                        <h4><span>🎨</span>취미 / 일상</h4>
+                        <h4><span>🎨</span>취미</h4>
                         <ul>
-                            <li><strong>취미:</strong> 영화 감상, 여행</li>
-                            <li><strong>일상:</strong> 책을 읽으려고 노력중</li>
+                            <li><strong>운동:</strong> (노래 들으면서) 산책</li>
+                            <li><strong>영화:</strong> 영화보기</li>
+                            <li><strong>여행:</strong> 새로운 곳 여행 다니고 싶어요.</li>
+                            <li><strong>일상:</strong> 책을 읽으려고 노력중(이지만 통학해서 집 가면 너무 피곤)</li>
                         </ul>
                     </div>
                 </div>
@@ -154,7 +156,7 @@
                     <div class="col-lg-6">
                         <h4><span>💡</span>임하는 마음</h4>
                         <ul>
-                            <li><strong>임하는 마음:</strong> 아직 부족하지만, 노력해서 성장하고자 합니다.</li>
+                            <li><strong></strong> 아직 부족하지만, 노력해서 성장하고자 합니다.</li>
                         </ul>
                     </div>
                 </div>
