--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         <h4><span>🎓</span>기본정보</h4>
                         <ul>
                             <li><strong>전공:</strong> 환경공학 / 소프트웨어융합전공</li>
-                            <li><strong>프로그래밍 경험:</strong>  NDVI를 활용한 서울시 녹지공간 분석 및 옥상녹화 시뮬레이션을 통한 NbS 기반 탄소흡수원 증진 전략, 산불 취약성 지도, 시계열분석을 통한 서울시 대기환경정책 실효성 평가 </li>
+                            <li><strong>프로그래밍 경험:</strong>  NDVI를 활용한 서울시 녹지공간 분석 및 옥상녹화 시뮬레이션을 통한 NbS 기반 탄소흡수원 증진 전략 <br>산불 취약성 지도 <br>시계열분석을 통한 서울시 대기환경정책 실효성 평가 </li>
                             <li><strong>인상 깊었던 수업:</strong> 융합소프트웨어기초설계, 대기관리및실습</li>
                         </ul>
                     </div>
