--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         <h4><span>🔍</span>기본정보</h4>
                         <ul>
                             <li><strong>전공:</strong> 환경공학 / 소프트웨어융합전공</li>
-                            <li><strong>프로그래밍 경험:</strong> <br>🚀산불 취약성 예측 지도 <br>🚀시계열분석을 통한 서울시 대기환경정책 실효성 평가 </li>
+                            <li><strong>프로그래밍 경험:</strong> <br> 파이썬<br>🚀산불 취약성 예측 지도 <br>🚀시계열분석을 통한 서울시 대기환경정책 실효성 평가 </li>
                             <li><strong>인상 깊었던 수업:</strong> 인간은왜춤을추는가</li>
                         </ul>
                     </div>
