--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@
             <div class="container my-5">
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
-                        <h4><span>🎨</span>취미</h4>
+                        <h4><span>🎨</span>일상</h4>
                         <ul>
                             <li><strong>운동:</strong> (노래 들으면서) 산책</li>
                             <li><strong>영화:</strong> 영화보기</li>
-                            <li><strong>여행:</strong> 새로운 곳 여행 다니고 싶어요.</li>
-                            <li><strong>일상:</strong> 책을 읽으려고 노력중(이지만 통학해서 집 가면 너무 피곤)</li>
+                            <li><strong>여행:</strong> 새로운 곳 여행 (돈 벌어서)</li>
+                            <li><strong>올해 목표:</strong> 1달 1권 책읽기 -> 이미 실패(통학해서 집 가면 너무 피곤)</li>
                         </ul>
                     </div>
                 </div>
@@ -156,7 +156,7 @@
                     <div class="col-lg-6">
                         <h4><span>💡</span>임하는 마음</h4>
                         <ul>
-                            <li><strong></strong> 아직 부족하지만, 노력해서 성장하고자 합니다.</li>
+                            <li><strong></strong> 지치지않고 완주하고 싶습니다.</li>
                         </ul>
                     </div>
                 </div>
