--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                             <li><strong>운동:</strong> (노래 들으면서) 산책</li>
                             <li><strong>영화:</strong> 영화보기</li>
                             <li><strong>여행:</strong> 새로운 곳 여행 (돈 벌어서)</li>
-                            <li><strong>올해 목표:</strong> 1달 1권 책읽기 -> 이미 실패(통학해서 집 가면 너무 피곤)</li>
+                            <li><strong>올해 목표:</strong> 1달 1권 책읽기 -> 실패 예정 (통학해서 집 가면 너무 피곤)</li>
                         </ul>
                     </div>
                 </div>
@@ -156,7 +156,7 @@
                     <div class="col-lg-6">
                         <h4><span>💡</span>임하는 마음</h4>
                         <ul>
-                            <li><strong></strong> 지치지않고 완주하고 싶습니다.</li>
+                            <li><strong></strong> 꾸준한 개발자가 되고 싶습니다.</li>
                         </ul>
                     </div>
                 </div>
